--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3007,7 +3007,7 @@ input, select, textarea {
 			padding: 1.75em 1.75em 0.1em 1.75em ;
 			background-color: #353849;
 			border-radius: 5px;
-			margin: 1.5em 3em 1.5em 0;
+			margin: 1em 1em 1em 1em;
 			width: calc(50% - 1.5em);
 		}
 
@@ -3068,6 +3068,8 @@ input, select, textarea {
 				}
 
 		}
+
+		
 
 /* Header */
 
@@ -3800,7 +3802,7 @@ input, select, textarea {
 			.wrapper.spotlight .image {
 				border-radius: 100%;
 				margin: 0 3em 2em 0;
-				width: 22em;
+				width: 30em;
 				overflow: hidden;
 				-ms-flex: 1;
 			}
@@ -3820,7 +3822,7 @@ input, select, textarea {
 				-webkit-flex-direction: row-reverse;
 				-ms-flex-direction: row-reverse;
 				flex-direction: row-reverse;
-				text-align: right;
+				text-align: left;
 			}
 
 			.wrapper.spotlight:nth-child(2n - 1) .image {
